<resources>
    <string name="app_name">Mealist</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="access_field_1">Username</string>
    <string name="access_field_2">Password</string>
    <string name="log_in">Log In</string>
    <string name="signup_string">New to Mealist?</string>
    <string name="sign_up">Sign Up</string>

    <string name="sample_month">June</string>
    <string name="sample_day">21</string>
    <string name="day_at_a_glance">Daily Meal Summary</string>
    <string name="no_recipes_added">No Recipes Added</string>
    <string name="total_calories">Total Calories (kcal):</string>
    <string name="total_carbs">Total Carbohydrates (g):</string>
    <string name="total_fat">Total Fat (g):</string>
    <string name="total_protein">Total Protein (g):</string>

    <string name="dash">—</string>
    <string name="sample_start_range">June 19</string>
    <string name="sample_end_range">June 25</string>

    <string name="date_text">Date:</string>
    <string name="date_picker_hint">Select a Date</string>
    <string name="meal_hint">Click to add meal</string>
    <string name="breakfast">Breakfast:</string>
    <string name="lunch">Lunch:</string>
    <string name="dinner">Dinner:</string>
    <string name="generate_meal">Generate Meal Plan</string>
    <string name="submit">Submit</string>

    <string name="selecting_for">Selecting recipe for:</string>
    <string name="generic_meal">meal</string>
    <string name="search">Search</string>
    <string name="recommend_for_me">Recommend for Me</string>
    <string name="search_hint">Search recipe by name</string>
    <string name="no_recipes_found">No recipes found</string>

    <string name="sample_recipe_name">Pesto Yogurt Pasta</string>
    <string name="sample_recipe">22 g yogurt \n12 g pasta</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="nutrition_info">Nutrition Info</string>
    <string name="favorite">Favorite</string>
    <string name="recipe_image">Recipe image</string>

    <!-- profile -->
    <string name="recent_recipes">Recent Recipes</string>
    <string name="favorites">Favorites</string>


</resources>