<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipe.AddRecipeFragment">

    <TextView
        android:id="@+id/tvSelectingFor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recipe_picker_margin"
        android:text="@string/selecting_for"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMealName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recipe_picker_margin"
        app:layout_constraintStart_toEndOf="@id/tvSelectingFor"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/generic_meal" />

    <EditText
        android:id="@+id/etRecipeSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/recipe_picker_margin"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/search_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSelectingFor" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:layout_margin="@dimen/recipe_picker_margin"
        app:layout_constraintStart_toEndOf="@+id/etRecipeSearch"
        app:layout_constraintTop_toBottomOf="@+id/tvMealName" />

</androidx.constraintlayout.widget.ConstraintLayout>