<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MakeMealPlan.MakePlanFragment">

    <TextView
        android:id="@+id/tvDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_text"
        android:textSize="@dimen/date_text_size"
        android:layout_marginHorizontal="@dimen/meal_padding_margin"
        android:layout_marginVertical="@dimen/date_picker_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/date_picker_hint"
        android:textSize="@dimen/date_text_size"
        android:layout_marginVertical="@dimen/date_picker_margin"
        android:layout_marginHorizontal="@dimen/meal_padding_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDateText"
        />

    <TextView
        android:id="@+id/tvBreakfastText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        android:layout_margin="@dimen/meal_padding_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDateText" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvBreakfast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/add_meal_corner_radius"
        app:cardElevation="0dp"
        app:contentPadding="0dp"
        android:layout_margin="@dimen/meal_padding_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBreakfastText">

    <TextView
        android:background="@color/blue_gray"
        android:id="@+id/tvBreakfastMeals"
        android:padding="@dimen/meal_padding_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/meal_hint"
        android:lines="4"
         />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/tvLunchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch"
        android:layout_margin="@dimen/meal_padding_margin"
        app:layout_constraintTop_toBottomOf="@id/cvBreakfast"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/add_meal_corner_radius"
        app:cardElevation="0dp"
        app:contentPadding="0dp"
        android:layout_margin="@dimen/meal_padding_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLunchText">

        <TextView
            android:background="@color/mango_tango"
            android:id="@+id/tvLunchMeals"
            android:padding="@dimen/meal_padding_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meal_hint"
            android:lines="4"
            />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDinnerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner"
        android:layout_margin="@dimen/meal_padding_margin"
        app:layout_constraintTop_toBottomOf="@id/cvLunch"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/add_meal_corner_radius"
        app:cardElevation="0dp"
        app:contentPadding="0dp"
        android:layout_margin="@dimen/meal_padding_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDinnerText">

        <TextView
            android:background="@color/corn"
            android:id="@+id/tvDinnerMeals"
            android:padding="@dimen/meal_padding_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/meal_hint"
            android:lines="4"
            />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvDinner"
        app:layout_constraintVertical_bias="0.32">

        <Button
            android:id="@+id/btnGenerateMealPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_margin"
            android:text="@string/generate_meal"
            app:layout_constraintEnd_toStartOf="@+id/btnSubmitMealPlan" />

        <Button
            android:id="@+id/btnSubmitMealPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/list_margin"
            android:text="@string/submit"

            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>