<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRecipeDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipe.RecipeDetailActivity">

    <ImageView
        android:id="@+id/ivRecipeImage"
        android:layout_width="@dimen/recipe_preview_width"
        android:layout_height="@dimen/recipe_preview_height"
        android:layout_margin="@dimen/meal_padding_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvRecipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_margin="@dimen/meal_padding_margin"
        tools:text="@string/sample_recipe_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivRecipeImage" />

    <TextView
        android:id="@+id/tvRecipeIngredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/meal_padding_margin"
        tools:text="@string/sample_recipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRecipeName" />

    <LinearLayout
        android:id="@+id/llButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvRecipeIngredients"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_meal"
            android:layout_margin="@dimen/meal_padding_margin"
            />

        <Button
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorite"
            android:layout_margin="@dimen/meal_padding_margin"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>