<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile.ProfileFragment"
    android:background="@drawable/profile_background">

    <TextView
        style="@style/specialText"
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/username_start_margin"
        android:layout_marginTop="@dimen/username_top_margin"
        tools:text="@string/sample_recipe_name"
        android:textSize="@dimen/username_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/specialText"
        android:id="@+id/tvRecents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/username_start_margin"
        android:layout_marginTop="@dimen/recents_top_margin"
        android:text="@string/recent_recipes"
        android:textSize="@dimen/profile_subtitles_text_size"
        app:layout_constraintTop_toBottomOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecents"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recents_height"
        android:layout_marginHorizontal="@dimen/username_start_margin"
        android:layout_marginTop="@dimen/recents_top_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecents"
        />

    <TextView
        android:id="@+id/textView"
        style="@style/specialText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/username_start_margin"
        android:layout_marginTop="@dimen/recents_top_margin"
        android:text="@string/favorites"
        android:textSize="@dimen/profile_subtitles_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvRecents" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="match_parent"
        android:layout_height="@dimen/favorites_height"
        android:layout_marginHorizontal="@dimen/username_start_margin"
        android:layout_marginTop="@dimen/recents_top_margin"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>